--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,7 @@ repositories {
     maven {
         url "https://jitpack.io"
     }
+    jcenter()
 }
 
 dependencies {
@@ -41,4 +42,7 @@ dependencies {
     implementation 'com.oguzdev:CircularFloatingActionMenu:1.0.2'
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.android.support:cardview-v7:27.1.1'
+    implementation 'com.wang.avi:library:2.1.3'
+    implementation 'com.getkeepsafe.taptargetview:taptargetview:1.11.0'
+
 }
