--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity"
-            android:launchMode="singleTop"
-            android:screenOrientation="portrait">
+            android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -22,7 +21,6 @@
         </activity>
         <activity android:name=".DetailActivity"
             android:label="DetailActivity"
-            android:screenOrientation="portrait"
             android:parentActivityName=".MainActivity">
         </activity>
     </application>
