--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+    implementation 'com.android.support:support-v4:27.1.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
@@ -44,5 +45,9 @@ dependencies {
     implementation 'com.android.support:cardview-v7:27.1.1'
     implementation 'com.wang.avi:library:2.1.3'
     implementation 'com.getkeepsafe.taptargetview:taptargetview:1.11.0'
+    implementation 'com.robertlevonyan.view:MaterialChipView:1.2.4'
+    implementation 'com.fmsirvent:parallaxeverywhere:1.0.4'
+    implementation 'com.nex3z:flow-layout:1.2.2'
+
 
 }
