--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,11 @@ android {
     }
 }
 
+ext {
+    supportLibraryVersion = '27.1.1'
+    //playServicesVersion = '9.2.1'
+}
+
 repositories {
     maven {
         url "https://jitpack.io"
@@ -28,26 +33,27 @@ repositories {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
-    implementation 'com.android.support:support-v4:27.1.1'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation 'com.amitshekhar.android:android-networking:1.0.1'
-    implementation 'com.android.support:recyclerview-v7:27.1.1'
-    implementation 'com.github.recruit-lifestyle:WaveSwipeRefreshLayout:1.6'
-    implementation 'com.squareup.picasso:picasso:2.71828'
-    implementation 'com.jakewharton:butterknife:8.8.1'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-    implementation 'com.oguzdev:CircularFloatingActionMenu:1.0.2'
-    implementation 'com.android.support:design:27.1.1'
-    implementation 'com.android.support:cardview-v7:27.1.1'
-    implementation 'com.wang.avi:library:2.1.3'
-    implementation 'com.getkeepsafe.taptargetview:taptargetview:1.11.0'
-    implementation 'com.robertlevonyan.view:MaterialChipView:1.2.4'
-    implementation 'com.fmsirvent:parallaxeverywhere:1.0.4'
-    implementation 'com.nex3z:flow-layout:1.2.2'
+    implementation "com.android.support:appcompat-v7:$supportLibraryVersion"
+    implementation "com.android.support:exifinterface:$supportLibraryVersion"
+    implementation "com.android.support.constraint:constraint-layout:1.1.2"
+    implementation "com.android.support:support-v4:$supportLibraryVersion"
+    testImplementation "junit:junit:4.12"
+    androidTestImplementation "com.android.support.test:runner:1.0.2"
+    androidTestImplementation "com.android.support.test.espresso:espresso-core:3.0.2"
+    implementation "com.amitshekhar.android:android-networking:1.0.1"
+    implementation "com.android.support:recyclerview-v7:$supportLibraryVersion"
+    implementation "com.github.recruit-lifestyle:WaveSwipeRefreshLayout:1.6"
+    implementation "com.squareup.picasso:picasso:2.71828"
+    implementation "com.jakewharton:butterknife:8.8.1"
+    annotationProcessor "com.jakewharton:butterknife-compiler:8.8.1"
+    implementation "com.oguzdev:CircularFloatingActionMenu:1.0.2"
+    implementation "com.android.support:design:$supportLibraryVersion"
+    implementation "com.android.support:cardview-v7:$supportLibraryVersion"
+    implementation "com.wang.avi:library:2.1.3"
+    implementation "com.getkeepsafe.taptargetview:taptargetview:1.11.0"
+    implementation "com.robertlevonyan.view:MaterialChipView:1.2.4"
+    implementation "com.fmsirvent:parallaxeverywhere:1.0.4"
+    implementation "com.nex3z:flow-layout:1.2.2"
 
     //Navigation Library
     implementation("com.mikepenz:materialdrawer:6.0.8@aar") {
