Added Share Feature Bug Fixes

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.pro.vyas.pranav.popularmovies">
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -15,25 +16,38 @@
             android:name=".MainActivity"
             android:launchMode="singleTop"
             android:theme="@style/MaterialDrawerTheme.Light">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".DetailActivity"
             android:label="DetailActivity"
+            android:launchMode="singleTop"
             android:parentActivityName=".MainActivity" />
-        <activity android:name=".extraUtils.SplashActivity"></activity>
+        <activity android:name=".extraUtils.SplashActivity" ><intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter></activity>
 
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
 
-        <activity android:name=".FavoritesActivity"
+        <activity
+            android:name=".FavoritesActivity"
             android:label="FavoritesActivity"
-            android:parentActivityName=".MainActivity"></activity>
+            android:launchMode="singleTop"
+            android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".FavouritesDetailActivity"
+            android:label="FavouritesDetailActivity"
+            android:launchMode="singleTop"
+            android:parentActivityName=".FavoritesActivity" />
+        <activity
+            android:name=".AboutAppActivity"
+            android:label="AboutAppActivity"
+            android:launchMode="singleTop"
+            android:parentActivityName=".MainActivity"/>
     </application>
 
 </manifest>
