--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,9 @@ dependencies {
     annotationProcessor "android.arch.persistence.room:compiler:$room_version"
 
     implementation 'com.karumi:dexter:5.0.0'
+    implementation 'at.blogc:expandabletextview:1.0.5'
+    implementation 'com.borjabravo:readmoretextview:2.1.0'
+    implementation 'com.github.devsideal:ReadMoreOption:1.0.0'
 
 
 }
